exports[`invalid(1): :is(.foo) {} 1`] = `

  1 | :is(.foo) {}

`;

exports[`invalid(1): :is(.foo) {} 2`] = `

Message:
> 1 | :is(.foo) {}
    | ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo {}

`;

exports[`invalid(10): :is(div).foo {} 1`] = `

  1 | :is(div).foo {}

`;

exports[`invalid(10): :is(div).foo {} 2`] = `

Message:
> 1 | :is(div).foo {}
    | ^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | div.foo {}

`;

exports[`invalid(11): :is(*).foo {} 1`] = `

  1 | :is(*).foo {}

`;

exports[`invalid(11): :is(*).foo {} 2`] = `

Message:
> 1 | :is(*).foo {}
    | ^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | *.foo {}

`;

exports[`invalid(12): .foo > :is(span).bar {} 1`] = `

  1 | .foo > :is(span).bar {}

`;

exports[`invalid(12): .foo > :is(span).bar {} 2`] = `

Message:
> 1 | .foo > :is(span).bar {}
    |        ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo > span.bar {}

`;

exports[`invalid(13): :is(.foo .bar) {} 1`] = `

  1 | :is(.foo .bar) {}

`;

exports[`invalid(13): :is(.foo .bar) {} 2`] = `

Message:
> 1 | :is(.foo .bar) {}
    | ^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo .bar {}

`;

exports[`invalid(14): :is(.foo > .bar) {} 1`] = `

  1 | :is(.foo > .bar) {}

`;

exports[`invalid(14): :is(.foo > .bar) {} 2`] = `

Message:
> 1 | :is(.foo > .bar) {}
    | ^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo > .bar {}

`;

exports[`invalid(15): :is(.foo + .bar) {} 1`] = `

  1 | :is(.foo + .bar) {}

`;

exports[`invalid(15): :is(.foo + .bar) {} 2`] = `

Message:
> 1 | :is(.foo + .bar) {}
    | ^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo + .bar {}

`;

exports[`invalid(16): :is(.foo ~ .bar), .baz {} 1`] = `

  1 | :is(.foo ~ .bar), .baz {}

`;

exports[`invalid(16): :is(.foo ~ .bar), .baz {} 2`] = `

Message:
> 1 | :is(.foo ~ .bar), .baz {}
    | ^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo ~ .bar, .baz {}

`;

exports[`invalid(17): :IS(.foo) {} 1`] = `

  1 | :IS(.foo) {}

`;

exports[`invalid(17): :IS(.foo) {} 2`] = `

Message:
> 1 | :IS(.foo) {}
    | ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo {}

`;

exports[`invalid(18): :\\69 s(.foo) {} 1`] = `

  1 | :\\69 s(.foo) {}

`;

exports[`invalid(18): :\\69 s(.foo) {} 2`] = `

Message:
> 1 | :\\69 s(.foo) {}
    | ^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo {}

`;

exports[`invalid(19): :\\000069s(div).foo {} 1`] = `

  1 | :\\000069s(div).foo {}

`;

exports[`invalid(19): :\\000069s(div).foo {} 2`] = `

Message:
> 1 | :\\000069s(div).foo {}
    | ^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | div.foo {}

`;

exports[`invalid(2): a:is(.foo) {} 1`] = `

  1 | a:is(.foo) {}

`;

exports[`invalid(2): a:is(.foo) {} 2`] = `

Message:
> 1 | a:is(.foo) {}
    |  ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | a.foo {}

`;

exports[`invalid(20): :is(.f\\6f o) {} 1`] = `

  1 | :is(.f\\6f o) {}

`;

exports[`invalid(20): :is(.f\\6f o) {} 2`] = `

Message:
> 1 | :is(.f\\6f o) {}
    | ^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .f\\6f o {}

`;

exports[`invalid(21): :is(.foo\\)):hover {} 1`] = `

  1 | :is(.foo\\)):hover {}

`;

exports[`invalid(21): :is(.foo\\)):hover {} 2`] = `

Message:
> 1 | :is(.foo\\)):hover {}
    | ^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo\\):hover {}

`;

exports[`invalid(22): :is(.foo\\61):focus {} 1`] = `

  1 | :is(.foo\\61):focus {}

`;

exports[`invalid(22): :is(.foo\\61):focus {} 2`] = `

Message:
> 1 | :is(.foo\\61):focus {}
    | ^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo\\61:focus {}

`;

exports[`invalid(23): :is(.foo)::before { color: red !important; } 1`] = `

  1 | :is(.foo)::before { color: red !important; }

`;

exports[`invalid(23): :is(.foo)::before { color: red !important; } 2`] = `

Message:
> 1 | :is(.foo)::before { color: red !important; }
    | ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo::before { color: red !important; }

`;

exports[`invalid(24): :not(:is(.foo)) {} :where(:is(.bar)) {} 1`] = `

  1 | :not(:is(.foo)) {} :where(:is(.bar)) {}

`;

exports[`invalid(24): :not(:is(.foo)) {} :where(:is(.bar)) {} 2`] = `

Message:
> 1 | :not(:is(.foo)) {} :where(:is(.bar)) {}
    |      ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :not(.foo) {} :where(:is(.bar)) {}

`;

exports[`invalid(24): :not(:is(.foo)) {} :where(:is(.bar)) {} 3`] = `

Message:
> 1 | :not(:is(.foo)) {} :where(:is(.bar)) {}
    |                           ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :not(:is(.foo)) {} :where(.bar) {}

`;

exports[`invalid(25): :nth-child(2n of :is(.foo)) {} 1`] = `

  1 | :nth-child(2n of :is(.foo)) {}

`;

exports[`invalid(25): :nth-child(2n of :is(.foo)) {} 2`] = `

Message:
> 1 | :nth-child(2n of :is(.foo)) {}
    |                  ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :nth-child(2n of .foo) {}

`;

exports[`invalid(26): :host(:is(.foo)) {} ::slotted(:is(.bar)) {} 1`] = `

  1 | :host(:is(.foo)) {} ::slotted(:is(.bar)) {}

`;

exports[`invalid(26): :host(:is(.foo)) {} ::slotted(:is(.bar)) {} 2`] = `

Message:
> 1 | :host(:is(.foo)) {} ::slotted(:is(.bar)) {}
    |       ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :host(.foo) {} ::slotted(:is(.bar)) {}

`;

exports[`invalid(26): :host(:is(.foo)) {} ::slotted(:is(.bar)) {} 3`] = `

Message:
> 1 | :host(:is(.foo)) {} ::slotted(:is(.bar)) {}
    |                               ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :host(:is(.foo)) {} ::slotted(.bar) {}

`;

exports[`invalid(27): @media (width > 1px) { @supports (display: grid) { :is(.foo > .bar) {} } } 1`] = `

  1 | @media (width > 1px) { @supports (display: grid) { :is(.foo > .bar) {} } }

`;

exports[`invalid(27): @media (width > 1px) { @supports (display: grid) { :is(.foo > .bar) {} } } 2`] = `

Message:
> 1 | @media (width > 1px) { @supports (display: grid) { :is(.foo > .bar) {} } }
    |                                                    ^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | @media (width > 1px) { @supports (display: grid) { .foo > .bar {} } }

`;

exports[`invalid(28): @container (width > 1px) { @layer components { :is(.foo) {} } } 1`] = `

  1 | @container (width > 1px) { @layer components { :is(.foo) {} } }

`;

exports[`invalid(28): @container (width > 1px) { @layer components { :is(.foo) {} } } 2`] = `

Message:
> 1 | @container (width > 1px) { @layer components { :is(.foo) {} } }
    |                                                ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | @container (width > 1px) { @layer components { .foo {} } }

`;

exports[`invalid(29): @scope (.root) { :is(.foo) {} } 1`] = `

  1 | @scope (.root) { :is(.foo) {} }

`;

exports[`invalid(29): @scope (.root) { :is(.foo) {} } 2`] = `

Message:
> 1 | @scope (.root) { :is(.foo) {} }
    |                  ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | @scope (.root) { .foo {} }

`;

exports[`invalid(3): .foo:is(:hover) {} 1`] = `

  1 | .foo:is(:hover) {}

`;

exports[`invalid(3): .foo:is(:hover) {} 2`] = `

Message:
> 1 | .foo:is(:hover) {}
    |     ^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo:hover {}

`;

exports[`invalid(30): @supports selector(:is(.foo)) { :is(.bar) {} } 1`] = `

  1 | @supports selector(:is(.foo)) { :is(.bar) {} }

`;

exports[`invalid(30): @supports selector(:is(.foo)) { :is(.bar) {} } 2`] = `

Message:
> 1 | @supports selector(:is(.foo)) { :is(.bar) {} }
    |                                 ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | @supports selector(:is(.foo)) { .bar {} }

`;

exports[`invalid(31): @scope (:is(.root)) to (:is(.limit)) { :is(.target) {} } 1`] = `

  1 | @scope (:is(.root)) to (:is(.limit)) { :is(.target) {} }

`;

exports[`invalid(31): @scope (:is(.root)) to (:is(.limit)) { :is(.target) {} } 2`] = `

Message:
> 1 | @scope (:is(.root)) to (:is(.limit)) { :is(.target) {} }
    |                                        ^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | @scope (:is(.root)) to (:is(.limit)) { .target {} }

`;

exports[`invalid(32): .foo { &:is([class^=\"bar\"]) {} } 1`] = `

  1 | .foo { &:is([class^="bar"]) {} }

`;

exports[`invalid(32): .foo { &:is([class^=\"bar\"]) {} } 2`] = `

Message:
> 1 | .foo { &:is([class^="bar"]) {} }
    |         ^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo { &[class^="bar"] {} }

`;

exports[`invalid(33): :is(.foo/* keep */.bar) {} 1`] = `

  1 | :is(.foo/* keep */.bar) {}

`;

exports[`invalid(33): :is(.foo/* keep */.bar) {} 2`] = `

Message:
> 1 | :is(.foo/* keep */.bar) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

`;

exports[`invalid(34): :is(/* before */.foo/* after */) {} 1`] = `

  1 | :is(/* before */.foo/* after */) {}

`;

exports[`invalid(34): :is(/* before */.foo/* after */) {} 2`] = `

Message:
> 1 | :is(/* before */.foo/* after */) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

`;

exports[`invalid(35): :is(\n  .foo\n) {\n  color: red;\n} 1`] = `

  1 | :is(
  2 |   .foo
  3 | ) {
  4 |   color: red;
  5 | }

`;

exports[`invalid(35): :is(\n  .foo\n) {\n  color: red;\n} 2`] = `

Message:
> 1 | :is(
    | ^^^^
> 2 |   .foo
    | ^^^^^^
> 3 | ) {
    | ^ Remove the unnecessary \`:is()\` wrapper.
  4 |   color: red;
  5 | }

Output:
  1 | .foo {
  2 |   color: red;
  3 | }

`;

exports[`invalid(36): :is(\r\n  .foo\r\n) {\r\n  color: red;\r\n} 1`] = `

  1 | :is(
  2 |   .foo
  3 | ) {
  4 |   color: red;
  5 | }

`;

exports[`invalid(36): :is(\r\n  .foo\r\n) {\r\n  color: red;\r\n} 2`] = `

Message:
> 1 | :is(
    | ^^^^
> 2 |   .foo
    | ^^^^^^
> 3 | ) {
    | ^ Remove the unnecessary \`:is()\` wrapper.
  4 |   color: red;
  5 | }

Output:
  1 | .foo {
  2 |   color: red;
  3 | }

`;

exports[`invalid(37): :is(:lang(en)) {} 1`] = `

  1 | :is(:lang(en)) {}

`;

exports[`invalid(37): :is(:lang(en)) {} 2`] = `

Message:
> 1 | :is(:lang(en)) {}
    | ^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :lang(en) {}

`;

exports[`invalid(38): :\\69 s(/* keep */.foo) {} 1`] = `

  1 | :\\69 s(/* keep */.foo) {}

`;

exports[`invalid(38): :\\69 s(/* keep */.foo) {} 2`] = `

Message:
> 1 | :\\69 s(/* keep */.foo) {}
    | ^^^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

`;

exports[`invalid(39): :\\69 s(.foo > .bar) {} 1`] = `

  1 | :\\69 s(.foo > .bar) {}

`;

exports[`invalid(39): :\\69 s(.foo > .bar) {} 2`] = `

Message:
> 1 | :\\69 s(.foo > .bar) {}
    | ^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo > .bar {}

`;

exports[`invalid(4): .foo :is(.bar) {} 1`] = `

  1 | .foo :is(.bar) {}

`;

exports[`invalid(4): .foo :is(.bar) {} 2`] = `

Message:
> 1 | .foo :is(.bar) {}
    |      ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo .bar {}

`;

exports[`invalid(40): :is([foo=\"bar\" i]) {} :is([foo=\"bar\" S]) {} 1`] = `

  1 | :is([foo="bar" i]) {} :is([foo="bar" S]) {}

`;

exports[`invalid(40): :is([foo=\"bar\" i]) {} :is([foo=\"bar\" S]) {} 2`] = `

Message:
> 1 | :is([foo="bar" i]) {} :is([foo="bar" S]) {}
    | ^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | [foo="bar" i] {} :is([foo="bar" S]) {}

`;

exports[`invalid(40): :is([foo=\"bar\" i]) {} :is([foo=\"bar\" S]) {} 3`] = `

Message:
> 1 | :is([foo="bar" i]) {} :is([foo="bar" S]) {}
    |                       ^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | :is([foo="bar" i]) {} [foo="bar" S] {}

`;

exports[`invalid(41): :is([foo=\"bar\" \\69]) {} 1`] = `

  1 | :is([foo="bar" \\69]) {}

`;

exports[`invalid(41): :is([foo=\"bar\" \\69]) {} 2`] = `

Message:
> 1 | :is([foo="bar" \\69]) {}
    | ^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | [foo="bar" \\69] {}

`;

exports[`invalid(5): :is(.foo) a {} 1`] = `

  1 | :is(.foo) a {}

`;

exports[`invalid(5): :is(.foo) a {} 2`] = `

Message:
> 1 | :is(.foo) a {}
    | ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo a {}

`;

exports[`invalid(6): .rgh-tic:is(:nth-of-type(5n+1)):has(~ .rgh-tic:hover:nth-of-type(5n+1))::before {} 1`] = `

  1 | .rgh-tic:is(:nth-of-type(5n+1)):has(~ .rgh-tic:hover:nth-of-type(5n+1))::before {}

`;

exports[`invalid(6): .rgh-tic:is(:nth-of-type(5n+1)):has(~ .rgh-tic:hover:nth-of-type(5n+1))::before {} 2`] = `

Message:
> 1 | .rgh-tic:is(:nth-of-type(5n+1)):has(~ .rgh-tic:hover:nth-of-type(5n+1))::before {}
    |         ^^^^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .rgh-tic:nth-of-type(5n+1):has(~ .rgh-tic:hover:nth-of-type(5n+1))::before {}

`;

exports[`invalid(7): .foo:has(:is(.bar)) {} 1`] = `

  1 | .foo:has(:is(.bar)) {}

`;

exports[`invalid(7): .foo:has(:is(.bar)) {} 2`] = `

Message:
> 1 | .foo:has(:is(.bar)) {}
    |          ^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo:has(.bar) {}

`;

exports[`invalid(8): .foo { a:is([class^=\"bar\"]) { color: red; } } 1`] = `

  1 | .foo { a:is([class^="bar"]) { color: red; } }

`;

exports[`invalid(8): .foo { a:is([class^=\"bar\"]) { color: red; } } 2`] = `

Message:
> 1 | .foo { a:is([class^="bar"]) { color: red; } }
    |         ^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | .foo { a[class^="bar"] { color: red; } }

`;

exports[`invalid(9): :is(#foo.active[data-state=\"open\"]) {} 1`] = `

  1 | :is(#foo.active[data-state="open"]) {}

`;

exports[`invalid(9): :is(#foo.active[data-state=\"open\"]) {} 2`] = `

Message:
> 1 | :is(#foo.active[data-state="open"]) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the unnecessary \`:is()\` wrapper.

Output:
  1 | #foo.active[data-state="open"] {}

`;
